--- a/betr/betr.entitlements
+++ b/betr/betr.entitlements
@@ -12,7 +12,7 @@
 	<array>
 		<string>CloudKit</string>
 	</array>
-	<key>com.apple.developer.icloud-container-environment</key>
-	<string>Development</string>
+	<key>com.apple.developer.ubiquity-kvstore-identifier</key>
+	<string>$(TeamIdentifierPrefix)$(CFBundleIdentifier)</string>
 </dict>
 </plist>
